# spore

./: .gitignore  PUBLISHING.md  README.md  _sporeAlpha.md  _sporeAlpha.v0.2.md  install.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
agents/: spore-worker.md
skills/audit/: SKILL.md
skills/help/: SKILL.md
skills/inbox/: SKILL.md
skills/map-rebuild/: SKILL.md
skills/refresh/: SKILL.md
skills/rules/: SKILL.md
skills/save/: SKILL.md
spore-binary/: Cargo.toml
spore-binary/src/: frontmatter.rs  init.rs  links.rs  main.rs  query.rs  refresh.rs  vault.rs
spore-helper/: Cargo.toml  README.md
spore-helper/src/: fsops.rs  init.rs  main.rs  query.rs  refresh.rs  vault.rs
